package com.wzy.adapter.objectadapter;

public interface IAdapter5V {
    int output5V();
}
