@startuml
'https://plantuml.com/class-diagram


class Voltage220V{}

interface IAdapter5V{}

class VoltageAdapter implements IAdapter5V{
    Voltage220V voltage220V;
    VoltageAdapter(Volatage220V);
}

class Phone{
    IAdapter5V adapter5v;
}

VoltageAdapter *... Voltage220V
Phone o...IAdapter5V

Client ...>Phone
Client ...>VoltageAdapter


@enduml